--- a/package.xml
+++ b/package.xml
@@ -20,10 +20,11 @@
 
   <!-- Dependencies needed to compile this package. -->
   <build_depend>roscpp</build_depend>
-  <build_depend>gazebo</build_depend>
+  <build_depend>gazebo_ros</build_depend>
+  <build_depend>gazebo_plugins</build_depend>
 
   <!-- Dependencies needed after this package is compiled. -->
   <run_depend>roscpp</run_depend>
   <run_depend>gazebo_ros</run_depend>
-
+  <run_depend>gazebo_plugins</run_depend>run_depend>
 </package>
